# TRVLRO

./: .gitignore  LICENSE.md  README.md
backend/trvlro/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/trvlro/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
backend/trvlro/trvlro/: __init__.py  __main__.py  conftest.py  settings.py
backend/trvlro/trvlro/assets/: prompts.py
backend/trvlro/trvlro/models/: __init__.py  city.py  itinerary.py  user.py
backend/trvlro/trvlro/services/: __init__.py  database.py  itinerary.py  llm.py
backend/trvlro/trvlro/tests/: __init__.py
backend/trvlro/trvlro/web/: __init__.py  application.py  lifetime.py
backend/trvlro/trvlro/web/api/: __init__.py  router.py  runna.py
backend/trvlro/trvlro/web/api/cities/: __init__.py  views.py
backend/trvlro/trvlro/web/api/docs/: __init__.py
backend/trvlro/trvlro/web/api/echo/: __init__.py  views.py
backend/trvlro/trvlro/web/api/itineraries/: __init__.py  views.py
backend/trvlro/trvlro/web/api/monitoring/: __init__.py
backend/trvlro/trvlro/web/api/recommendations/: __init__.py
backend/trvlro/trvlro/web/api/users/: __init__.py  views.py
frontend/trvlro/: Dockerfile  deploy.sh  package-lock.json  package.json
frontend/trvlro/public/: index.html
frontend/trvlro/src/: App.tsx  firebase-config.tsx  firebase.tsx  index.tsx  routes.tsx
frontend/trvlro/src/components/: Activity.tsx  Chat.tsx  Footer.tsx  Itinerary.tsx  LoadingScreen.tsx  Navbar.tsx  NavigationLayout.tsx  Questionnaire.tsx
frontend/trvlro/src/context/: AuthContext.tsx  SiderContext.tsx
frontend/trvlro/src/pages/: AccountPage.tsx  ChatPage.tsx  HomePage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx  TravelsPage.tsx
frontend/trvlro/src/styles/: AccountPage.module.css  HomePage.css  HomePage.module.css  LandingPage.module.css  LoginPage.css  NavigationLayout.module.css  Questionnaire.module.css  RegisterPage.css  RegisterPage.module.css  TravelsPage.module.css
frontend/trvlro/src/utils/: API.tsx
